crates/runtime/tests/metadata/snapshots/integration__metadata__docs_file_location_filter_schema.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: "format!(\"{schema}\")"
---
Field { "filename": nullable LargeUtf8 }, Field { "_location": nullable Utf8 }
