crates/runtime/tests/metadata/snapshots/integration__metadata__docs_file_metadata_schema.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: "format!(\"{schema}\")"
---
Field { "document_id": nullable LargeUtf8 }, Field { "location": nullable Utf8 }
