crates/runtime/tests/metadata/snapshots/integration__metadata__docs_file_metadata_with_location_pred_alias.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: formatted
---
+------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+------------+--------+
| content                                                                                        | location                                                                              | day        | size   |
+------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+------------+--------+
| Project requirements specification v2.1 – outlines goals, milestones, and deliverables for Q1. | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-01-01/data_0.parquet | 2022-01-01 | 1234.5 |
+------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------+------------+--------+
