crates/runtime/tests/metadata/snapshots/integration__metadata__docs_file_metadata_with_location_pred_schema.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: "format!(\"{schema}\")"
---
Field { "doc_content": nullable LargeUtf8 }, Field { "location": nullable Utf8 }, Field { "day": nullable Utf8 }, Field { "size": nullable Float64 }
