crates/runtime/tests/metadata/snapshots/integration__metadata__docs_file_only_no_metadata.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: formatted
---
+-------------+-----------------------+
| document_id | filename              |
+-------------+-----------------------+
| doc_1       | requirements.pdf      |
| doc_10      | postmortem_feb.md     |
| doc_2       | arch_review.md        |
| doc_3       | empty_placeholder.txt |
| doc_4       | q1_finance.xlsx       |
+-------------+-----------------------+
