crates/runtime/tests/metadata/snapshots/integration__metadata__docs_file_partition_filter.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: formatted
---
+------------------+---------------------------------------------------------------------------------------+
| filename         | location                                                                              |
+------------------+---------------------------------------------------------------------------------------+
| requirements.pdf | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-01-01/data_0.parquet |
| arch_review.md   | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-01-01/data_0.parquet |
+------------------+---------------------------------------------------------------------------------------+
