crates/runtime/tests/metadata/snapshots/integration__metadata__docs_file_partition_filter_schema.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: "format!(\"{schema}\")"
---
Field { "filename": nullable LargeUtf8 }, Field { "location": nullable Utf8 }
